app/assets/stylesheets/custom.scss
@import "bootstrap-sprockets";
@import "bootstrap";
@import "bootstrap-social";
@import "font-awesome";

/* mixins, variables, etc. */

$gray-medium-light: #eaeaea;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* universal */

body {
  padding-top: 60px;
  font-family: 'Lobster Two', cursive;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;

  h1 {
    margin-bottom: 10px;
  }
}

/* typography */

h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $gray-light;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* header */

#logo {
  font-family: 'Liu Jian Mao Cao',
    cursive;
  float: left;
  margin-right: 10px;
  margin-left: 50px;
  font-size: 1.7em;
  color: white;
  // text-transform: uppercase;
  letter-spacing: -1px;
  padding-top: 9px;
  // font-weight: bold;

  &:hover {
    color: white;
    text-decoration: none;
  }
}

.search-nav {
  width: 200px;
  padding-top: 9px;
}

.navbar {
  background-color: #426579;
  color: white;
}

body>header>div>nav>ul>li>a {
  color: white;
}

header>div>nav>ul {
  padding: 0 50px 0 0;
  font-size: 2em;
}

/* footer */

footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid $gray-medium-light;
  color: $gray-light;

  a {
    color: $gray;

    &:hover {
      color: $gray-darker;
    }
  }

  small {
    float: left;
  }

  ul {
    float: right;
    list-style: none;

    li {
      float: left;
      margin-left: 15px;
    }
  }
}

/* miscellaneous */

.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

/* sidebar */

aside {
  section.user_info {
    margin-top: 20px;
  }

  section {
    padding: 10px 0;
    margin-top: 20px;

    &:first-child {
      border: 0;
      padding-top: 0;
    }

    span {
      display: block;
      margin-bottom: 3px;
      line-height: 1;
    }

    h1 {
      font-size: 1.4em;
      text-align: left;
      letter-spacing: -1px;
      margin-bottom: 3px;
      margin-top: 0px;
    }
  }
}

.gravatar {
  float: left;
  margin-right: 10px;
}

.gravatar_edit {
  margin-top: 15px;
}

.stats {
  overflow: auto;
  margin-top: 0;
  padding: 0;

  a {
    float: left;
    padding: 0 10px;
    border-left: 1px solid $gray-lighter;
    color: gray;

    &:first-child {
      padding-left: 0;
      border: 0;
    }

    &:hover {
      text-decoration: none;
      color: blue;
    }
  }

  strong {
    display: block;
  }
}

.user_avatars {
  overflow: auto;
  margin-top: 10px;

  .gravatar {
    margin: 1px 1px;
  }

  a {
    padding: 0;
  }
}

.users.follow {
  padding: 0;
}

div#follow_form {
  border: solid 2px #426545;
}



/* forms */

input,
textarea,
select,
.uneditable-input {
  border: 1px solid #bbb;
  width: 100%;
  margin-bottom: 15px;
  @include box_sizing;
}

input {
  height: auto !important;
}


#error_explanation {
  color: red;

  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

.field_with_errors {
  @extend.has-error;

  .form-control {
    color: $state-danger-text;
  }
}

.checkbox {
  margin-top: -10px;
  margin-bottom: 10px;

  span {
    margin-left: 20px;
    font-weight: normal;
  }
}

#session_remember_me {
  width: auto;
  margin-left: 0;
}

div.container>div>h1 {
  text-align: left;
  font-size: 2em;
}

/* Users index */

.users {
  list-style: none;
  margin: 0;

  li {
    overflow: auto;
    padding: 10px 0;
    border-bottom: 1px solid $gray-lighter;
  }
}

/* insta_posts */
ol.insta_posts>li {
  margin: 10px 0;
  padding: -10px 0;
}

.insta_posts {
  list-style: none;
  padding: 0;

  li {
    padding: 10px 0;
    border-top: 1px solid #e8e8e8;
  }

  .user {
    margin-top: 5em;
    padding-top: 0;
  }

  .content {
    display: block;
    margin-left: 60px;

    img {
      display: block;
      padding: 5px 0;
    }
  }

  .timestamp {
    color: $gray-light;
    display: block;
    margin-left: 60px;
  }

  .gravatar {
    float: left;
    margin-right: 10px;
    margin-top: 5px;
  }
}

aside {
  textarea {
    height: 100px;
    margin-bottom: 5px;
  }
}

span.picture {
  margin-top: 10px;

  input {
    border: 0;
  }
}

/*-----------backgroung-image--------------*/

body {
  /* 画像ファイルの指定 */
  // background-image: url(海.jpg);

  /* 画像を常に天地左右の中央に配置 */
  background-position: center center;

  /* 画像をタイル状に繰り返し表示しない */
  background-repeat: no-repeat;

  /* コンテンツの高さが画像の高さより大きい時、動かないように固定 */
  background-attachment: fixed;

  /* 表示するコンテナの大きさに基づいて、背景画像を調整 */
  background-size: cover;

  /* 背景画像が読み込まれる前に表示される背景のカラー */
  // background-color: #464646;
}

/*-----------------facebook----------------*/

.btn-facebook {
  margin-top: 20px;
}

/*-----------------like_button----------------*/
div.timestamp-and-like {
  display: flex;
  align-items: center;
}

span.like {
  margin: 0 18px 0 auto;
}

span.like-display {
  font-size: 3em;
  border: solid 2px #426579;

}

